# line_advection

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
sample_data/basic_set/: mats.txt
sample_data/basic_set/depth/: Image0001.exr  Image0002.exr  Image0003.exr  Image0004.exr  Image0005.exr  Image0006.exr  Image0007.exr  Image0008.exr  Image0009.exr  Image0010.exr  Image0011.exr  Image0012.exr  Image0013.exr  Image0014.exr  Image0015.exr  Image0016.exr  Image0017.exr  Image0018.exr  Image0019.exr  Image0020.exr  Image0021.exr  Image0022.exr  Image0023.exr  Image0024.exr  Image0025.exr  Image0026.exr  Image0027.exr  Image0028.exr  Image0029.exr  Image0030.exr  Image0031.exr  Image0032.exr  Image0033.exr  Image0034.exr  Image0035.exr  Image0036.exr  Image0037.exr  Image0038.exr  Image0039.exr  Image0040.exr  (+30 more)
sample_data/basic_set/mvec/: Image0001.exr  Image0002.exr  Image0003.exr  Image0004.exr  Image0005.exr  Image0006.exr  Image0007.exr  Image0008.exr  Image0009.exr  Image0010.exr  Image0011.exr  Image0012.exr  Image0013.exr  Image0014.exr  Image0015.exr  Image0016.exr  Image0017.exr  Image0018.exr  Image0019.exr  Image0020.exr  Image0021.exr  Image0022.exr  Image0023.exr  Image0024.exr  Image0025.exr  Image0026.exr  Image0027.exr  Image0028.exr  Image0029.exr  (+41 more)
src/: CMakeLists.txt  Untitled-1.txt
src/app/: Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  StrokeHandler.cpp  StrokeHandler.h  main.cpp
src/core/: MathTypes.h  MotionTranslator.cpp  MotionTranslator.h  Object.h  Point.cpp  Point.h  Stroke.cpp  Stroke.h  VectorImage.cpp  VectorImage.h
